syntax = "proto3";
// 指定等会文件生成出来的package
option go_package = "sparrow/protocol/msg_server";
package msg_server;


import "google/protobuf/empty.proto";
import public "error_code.proto";
import public "msg_client.proto";

//注册服务
message RegisterServiceRequest{
  uint32 server_type = 1;
  string rpc_port = 2;
}

message RegisterServiceResponse{
  error_code.enum_error_code error_code = 1;		//0代表正常
  uint32 server_id = 2;
}
//请求服务列表
message ServiceItem{
	uint32 server_id = 1;
	uint32 server_type = 2;
	string ip = 3;
	string port = 4;
}
message QueryServiceListResponse{
  error_code.enum_error_code error_code = 1;		//0代表正常
  repeated ServiceItem server_list = 2;//服务列表
}
//更新服务列表
message UpdateServiceListRequest{
  repeated ServiceItem server_list = 1;//服务列表
}
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//服务
service rpc_service{
  //服务注册
  rpc RegisterService(RegisterServiceRequest) returns(RegisterServiceResponse);
  //服务请求
  rpc QueryServiceList(google.protobuf.Empty) returns(QueryServiceListResponse);
  //服务更新
  rpc UpdateServiceList(UpdateServiceListRequest) returns(google.protobuf.Empty);
  
   //用户注册
  rpc ClientRegister(msg_client.ClientRegisterReq) returns(msg_client.ClientRegisterRes);
  //用户登录
  rpc ClientLogin(msg_client.ClientLoginReq) returns(msg_client.ClientLoginRes);
  //获取角色列表
  rpc QueryRoleList(msg_client.QueryRoleListReq) returns(msg_client.QueryRoleListRes);
   //创建角色
  rpc CreateRole(msg_client.CreateRoleReq) returns(msg_client.CreateRoleRes);

}
